# serve

.github/workflows/: benchmark_nightly.yml  benchmark_torch_compile_nightly.yml  ci-cpu-cpp.yml  ci_cpu.yml  ci_gpu.yml  ci_graviton_cpu.yml  codeql.yml  doc-automation.yml  docker-ci.yaml  docker-nightly-build.yml  kserve_cpu_tests.yml  kserve_gpu_tests.yml  kubernetes_tests.yml  lint.yml  official_release.yml  official_release_docker.yml  regression_tests_cpu.yml  regression_tests_cpu_binaries.yml  regression_tests_docker.yml  regression_tests_gpu.yml  regression_tests_gpu_binaries.yml  regression_tests_graviton_cpu.yml  torchserve-nightly-build.yml
cpp/: .clang-tidy  CMakeLists.txt
examples/cpp/aot_inductor/bert/: CMakeLists.txt
examples/large_models/ipex_llm_int8/: requirements.txt
examples/large_models/vllm/: requirements.txt
frontend/: build.gradle
frontend/archive/: build.gradle
plugins/endpoints/: build.gradle
requirements/: common.txt  developer.txt  torch_cu101_linux.txt  torch_cu101_windows.txt  torch_cu102_linux.txt  torch_cu102_windows.txt  torch_cu111_linux.txt  torch_cu111_windows.txt  torch_cu113_linux.txt  torch_cu113_windows.txt  torch_cu116_linux.txt  torch_cu116_windows.txt  torch_cu117_linux.txt  torch_cu117_windows.txt  torch_cu118_linux.txt  torch_cu118_windows.txt  torch_cu121_linux.txt  torch_cu121_windows.txt  torch_cu92.txt  torch_cu92_linux.txt  torch_darwin.txt  torch_linux.txt  torch_linux_aarch64.txt  torch_neuronx_linux.txt  torch_rocm60.txt  torch_rocm61.txt  torch_rocm62.txt  torch_windows.txt
